--- a/commanditaires.html
+++ b/commanditaires.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>Accueil | Congrï¿½s AMQ 2019</title>
 
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
@@ -22,7 +22,7 @@
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    
+
     <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
@@ -36,51 +36,49 @@
                 </button>
                 <a class="navbar-brand" id="navbar-space" href="index.html"><img src="assets/mini-logo.png" width="70" height="30" alt=""> </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="white">ACCUEIL</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÃ‰NÃ‰RALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">AFFICHE</a></li>
-                            <li><a href="#">CONTACT</a></li>
-                            <li><a href="#">COMITÉ ORGANISATEUR</a></li>
+                            <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
+                            <li><a href="Comite.html">COMITÃ‰ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SE RENDRE AU CÉGEP | NOUS CONTACTER </a></li>
+                            <li><a href="Apropos_AMQ.html">Ã€ PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">COMMANDITAIRES</a></li>
+                            <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">THÈME: LES MATHÉMATIQUES AU SERVICE DE LA COMMUNAUTÉ</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="invites.html">CONFÉRENCE PLENIÈRE</a></li>
-                            <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="#">PROGRAMME ET RÉSUMÉS</a></li>
+                            <li><a href="conference_pleniere.html">CONFÃ‰RENCE PLENIÃˆRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÃ‰</a></li>
+                            <li><a href="horaire.html">HORAIRE GÃ‰NÃ‰RAL</a></li>
+                            <li><a href="invites.html">ATELIERS</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PARTICIPER AU CONGRÈS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÃˆS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">S'INSCRIRE</a></li>
+                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="itineraire.html">ITINÃ‰RAIRE</a></li>
+                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+
+                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SOUMETTRE UN ATELIER</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">PROPOSER UN SÉMINAIRE</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÃ‰GEP</a></li>
                         </ul>
                     </li>
+                    <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÃ‰</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
-
-
 
 
 
@@ -91,38 +89,29 @@
         <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
         <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
         <img class="comman_img" src="https://www.threetwelvecreative.com/hs-fs/hubfs/texasinstruments-06.jpg?width=2668&height=1500&name=texasinstruments-06.jpg" />
-        
+
     </div>
 
-
-   
 
     <div class="footer">
         <!-- Footer -->
         <footer class="page-footer font-small blue pt-4">
-
             <!-- Footer Links -->
             <div class="container-fluid text-center text-md-left">
-
                 <!-- Grid row -->
                 <div class="row">
-
                     <!-- Grid column -->
                     <div class="col-md-6 mt-md-0 mt-3">
-
                         <!-- Content -->
-                        <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
+                        <h1 class="footer-congress" id="ftc-top">CONGRï¿½S</h1>
                         <h1 class="footer-congress">AMQ 2019</h1>
-
                     </div>
                     <!-- Grid column -->
                     <div id="footer-list">
                         <!-- Grid column -->
                         <div class="col-md-3 mb-md-0 mb-3">
-
                             <!-- Links -->
                             <h5 class="text-uppercase">Links</h5>
-
                             <ul class="list-unstyled">
                                 <li>
                                     <a href="#!">Link 1</a>
@@ -137,15 +126,12 @@
                                     <a href="#!">Link 4</a>
                                 </li>
                             </ul>
-
                         </div>
                         <!-- Grid column -->
                         <!-- Grid column -->
                         <div class="col-md-3 mb-md-0 mb-3">
-
                             <!-- Links -->
                             <h5 class="text-uppercase">Links</h5>
-
                             <ul class="list-unstyled">
                                 <li>
                                     <a href="#!">Link 1</a>
@@ -160,27 +146,16 @@
                                     <a href="#!">Link 4</a>
                                 </li>
                             </ul>
-
                         </div>
                         <!-- Grid column -->
                     </div>
                 </div>
                 <!-- Grid row -->
-
             </div>
-
         </footer>
         <!-- Footer -->
 
-
     </div>
-
-
-
-
-
-
-
 
 
 
@@ -191,7 +166,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
     <script src="scripts/script1.js"></script>
 </body>
 </html>
