--- a/index.html
+++ b/index.html
@@ -61,11 +61,10 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="affiche.html">AFFICHE</a></li>
-                            <li><a href="#">CONTACT</a></li>
-                            <li><a href="#">COMITÉ ORGANISATEUR</a></li>
+                            <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
+                            <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SE RENDRE AU CÉGEP | NOUS CONTACTER </a></li>
+                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
@@ -73,23 +72,26 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">THÈME: LES MATHÉMATIQUES AU SERVICE DE LA COMMUNAUTÉ</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="invites.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="#">PROGRAMME ET RÉSUMÉS</a></li>
+                            <li><a href="invites.html">ATELIERS</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PARTICIPER AU CONGRÈS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">S'INSCRIRE</a></li>
+                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
+                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+
+                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SOUMETTRE UN ATELIER</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">PROPOSER UN SÉMINAIRE</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
+                    <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
