--- a/invites.html
+++ b/invites.html
@@ -35,7 +35,6 @@
                 </button>
                 <a class="navbar-brand" id="navbar-space" href="index.html"><img src="assets/mini-logo.png" width="70" height="30" alt=""> </a>
             </div>
-
             <!-- Collect the nav links, forms, and other content for toggling -->
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -44,35 +43,37 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">AFFICHE</a></li>
-                            <li><a href="#">CONTACT</a></li>
-                            <li><a href="#">COMITÉ ORGANISATEUR</a></li>
+                            <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
+                            <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SE RENDRE AU CÉGEP | NOUS CONTACTER </a></li>
+                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">COMMANDITAIRES</a></li>
+                            <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">THÈME: LES MATHÉMATIQUES AU SERVICE DE LA COMMUNAUTÉ</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="invites.html">CONFÉRENCE PLENIÈRE</a></li>
-                            <li><a href="#">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="#">PROGRAMME ET RÉSUMÉS</a></li>
+                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
+                            <li><a href="invites.html">ATELIERS</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PARTICIPER AU CONGRÈS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">S'INSCRIRE</a></li>
+                            <li><a href="hebergement.html">HEBERGEMENT</a></li>
+                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
+                            <li><a href="convoiturage.html">CONVOITURAGE</a></li>
+
+                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="#">SOUMETTRE UN ATELIER</a></li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="#">PROPOSER UN SÉMINAIRE</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
+                    <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -83,12 +84,10 @@
     <div class="page-standard" id="invites-p1">
         <h1>Ateliers</h1>
         <h2 class="precedent-suivant" id="precedent" onclick="myFunction(-2)">Voir invité précédent </h2>
-
         <h3 id="nomInvite">Terence Tao</h3>
         <div class="col-md-12 col-s-12 " id="texte-p1">
             <p id="txtInvite">
                 <img align="right" id="imgInvite" src="assets/tao.jpg" />
-
                 Lorem ipsum dolor sit amet, ne paulo deserunt sed. Vel idque nonumes te, eros facer periculis et eam. Usu et alia adhuc pertinacia, erant perfecto conclusionemque duo ex, mea ei etiam vocibus splendide. At nec nobis gubergren sententiae, eius sanctus phaedrum his eu. At duo temporibus theophrastus.
                 <br /> <br />
                 Id labore dicunt dolorum eos, utamur inermis accommodare vix et. Eu maiorum perfecto per, probo adipiscing eam ex. Alii iisque ne usu. Vis maiorum scriptorem dissentiunt id, esse exerci no duo, mandamus signiferumque sea ex. Duis prodesset omittantur pro ad, ne pro eius repudiare omittantur. Et has minim mollis cotidieque, nisl nullam deterruisset his ex. Cu dicit efficiendi eam. Ubique principes reprehendunt eu vel, per no meliore vivendum. Ut dolorem mandamus mel, in vis utinam melius. Cum tempor constituto ea, vim te quis sadipscing.
@@ -96,9 +95,8 @@
                 Graecis recusabo eu est, natum convenire sea at. Eum an veniam euismod nusquam, probo denique id pro, dicunt melius definitiones pri uut.
             </p>
         </div>
-        
-            <h2 class="precedent-suivant" id="suivant"  onclick="myFunction(1)">Voir invité suivant </h2>
 
+        <h2 class="precedent-suivant" id="suivant" onclick="myFunction(1)">Voir invité suivant </h2>
         <h3 id="AlphTitre">Par ordre alphabétique</h3>
         <a href="#">
             <img id="ordreAlph" src="assets/invitesOrdreAlph.png" />
@@ -107,35 +105,25 @@
 
 
 
-
-
-
     <div class="footer">
         <!-- Footer -->
         <footer class="page-footer font-small blue pt-4">
-
             <!-- Footer Links -->
             <div class="container-fluid text-center text-md-left">
-
                 <!-- Grid row -->
                 <div class="row">
-
                     <!-- Grid column -->
                     <div class="col-md-6 mt-md-0 mt-3">
-
                         <!-- Content -->
                         <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
                         <h1 class="footer-congress">AMQ 2019</h1>
-
                     </div>
                     <!-- Grid column -->
                     <div id="footer-list">
                         <!-- Grid column -->
                         <div class="col-md-3 mb-md-0 mb-3">
-
                             <!-- Links -->
                             <h5 class="text-uppercase">Links</h5>
-
                             <ul class="list-unstyled">
                                 <li>
                                     <a href="#!">Link 1</a>
@@ -150,15 +138,12 @@
                                     <a href="#!">Link 4</a>
                                 </li>
                             </ul>
-
                         </div>
                         <!-- Grid column -->
                         <!-- Grid column -->
                         <div class="col-md-3 mb-md-0 mb-3">
-
                             <!-- Links -->
                             <h5 class="text-uppercase">Links</h5>
-
                             <ul class="list-unstyled">
                                 <li>
                                     <a href="#!">Link 1</a>
@@ -173,18 +158,14 @@
                                     <a href="#!">Link 4</a>
                                 </li>
                             </ul>
-
                         </div>
                         <!-- Grid column -->
                     </div>
                 </div>
                 <!-- Grid row -->
-
             </div>
-
         </footer>
         <!-- Footer -->
-
 
     </div>
 
@@ -192,21 +173,15 @@
 
 
 
-
-
-
-
-
     <!--= function () {
     alert("button was clicked");-->
-
     <script>
         var list_no = 0;
         function myFunction(parameter) {
-                list_no = list_no + parameter;
+            list_no = list_no + parameter;
             if (list_no == -1) {
-                return [document.getElementById("nomInvite").innerHTML = "Michael Atiyah",document.getElementById("imgInvite").src = "assets/atiyah.jpg"];
-                
+                return [document.getElementById("nomInvite").innerHTML = "Michael Atiyah", document.getElementById("imgInvite").src = "assets/atiyah.jpg"];
+
 
             }
             else if (list_no != -1) {
