--- a/nous_contacter.html
+++ b/nous_contacter.html
@@ -1,27 +1,22 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrï¿½s AMQ 2019</title>
-
+    <title>Accueil | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!--CSS general du site (peut etre enlever ceci)-->
     <!--<link rel="stylesheet" href="styles/main.css" type="text/css" />-->
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Horaire.css" />
-
+    <link rel="stylesheet" href="styles/Pages/Nous_contacter.css" />
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -40,12 +35,12 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="white">ACCUEIL</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÃ‰NÃ‰RALE<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
-                            <li><a href="Comite.html">COMITÃ‰ ORGANISATEUR</a></li>
+                            <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">Ã€ PROPOS DE L'AMQ </a></li>
+                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
@@ -53,38 +48,51 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="conference_pleniere.html">CONFÃ‰RENCE PLENIÃˆRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÃ‰</a></li>
-                            <li><a href="horaire.html">HORAIRE GÃ‰NÃ‰RAL</a></li>
+                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
+                            <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
                             <li><a href="invites.html">ATELIERS</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÃˆS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="hebergement.html">HEBERGEMENT</a></li>
-                            <li><a href="itineraire.html">ITINÃ‰RAIRE</a></li>
+                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
                             <li><a href="convoiturage.html">CONVOITURAGE</a></li>
 
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÃ‰GEP</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
                     </li>
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÃ‰</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
+
+
+
     <div class="page-standard">
-        <img id="horaireGen" src="assets/horaire_general.jpg" onclick="myFunction()" />
-        <a href="#">
-            <h3 id="telechargement">Tï¿½lï¿½charger l'horaire</h3>
-        </a>
+
+        <p>
+            lorem ipsum
+        </p>
+
+
+
     </div>
+
+
+
+
+
+
+
+
 
     <div class="footer">
         <!-- Footer -->
@@ -96,7 +104,7 @@
                     <!-- Grid column -->
                     <div class="col-md-6 mt-md-0 mt-3">
                         <!-- Content -->
-                        <h1 class="footer-congress" id="ftc-top">CONGRï¿½S</h1>
+                        <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
                         <h1 class="footer-congress">AMQ 2019</h1>
                     </div>
                     <!-- Grid column -->
@@ -153,12 +161,7 @@
 
 
 
-    <script>
-        function myFunction() {
-            return [document.getElementById("horaireGen").src = "assets/horaire_perso.jpg"];
-        }
 
-    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -166,4 +169,3 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="scripts/script1.js"></script>
 </body>
-</html>
