modif Confé pleniere

--- a/hebergement.html
+++ b/hebergement.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>Accueil | CongrÃ¨s AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -35,12 +35,12 @@
                 <ul class="nav navbar-nav">
                     <li><a href="index.html" class="white">ACCUEIL</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÉNÉRALE<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">INFORMATION GÃ‰NÃ‰RALE<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="nous_contacter.html">NOUS CONTACTER</a></li>
-                            <li><a href="Comite.html">COMITÉ ORGANISATEUR</a></li>
+                            <li><a href="Comite.html">COMITÃ‰ ORGANISATEUR</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="Apropos_AMQ.html">À PROPOS DE L'AMQ </a></li>
+                            <li><a href="Apropos_AMQ.html">Ã€ PROPOS DE L'AMQ </a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="commanditaires.html">COMMANDITAIRES</a></li>
                         </ul>
@@ -48,26 +48,26 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">PROGRAMME<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="conference_pleniere.html">CONFÉRENCE PLENIÈRE</a></li>
-                            <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
-                            <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
+                            <li><a href="conference_pleniere.html">CONFÃ‰RENCE PLENIÃˆRE</a></li>
+                            <li><a href="Artiste.html">ARTISTE INVITÃ‰</a></li>
+                            <li><a href="horaire.html">HORAIRE GÃ‰NÃ‰RAL</a></li>
                             <li><a href="invites.html">ATELIERS</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÃˆS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="hebergement.html">HEBERGEMENT</a></li>
-                            <li><a href="itineraire.html">ITINÉRAIRE</a></li>
+                            <li><a href="itineraire.html">ITINÃ‰RAIRE</a></li>
                             <li><a href="convoiturage.html">CONVOITURAGE</a></li>
 
                             <li><a href="stationnement.html">STATIONNEMENT</a></li>
                             <li role="separator" class="divider"></li>
-                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
+                            <li><a href="proche_cegep.html">LIEUX PROCHES DU CÃ‰GEP</a></li>
                         </ul>
                     </li>
                     <li><a href="inscription.html" class="white">INSCRIPTION</a></li>
-                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÉ</a></li>
+                    <li><a href="Ecoresponsabilite.html" class="white" id="eco_friendly">ECORESPONSABILITÃ‰</a></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
@@ -104,7 +104,7 @@
                     <!-- Grid column -->
                     <div class="col-md-6 mt-md-0 mt-3">
                         <!-- Content -->
-                        <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
+                        <h1 class="footer-congress" id="ftc-top">CONGRÃˆS</h1>
                         <h1 class="footer-congress">AMQ 2019</h1>
                     </div>
                     <!-- Grid column -->
