modif horaire et autres

--- a/Artiste.html
+++ b/Artiste.html
@@ -82,10 +82,8 @@
 
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
     <div class="page-standard" id="Artistes-p1">
-        <h1>Vernissage</h1>
-
-        <h3 id="nomArtiste">Étienne St-Amand</h3>
-        <div class="col-md-12 col-s-12 " id="texte-p1">
+        <h1>Étienne Saint-Amant</h1>
+        <div class="col-md-12 col-s-12">
             <p id="txtArtiste">
                 <img align="right" id="imgArtiste" src="assets/EtienneSaintAmant.jpg" />
 
