--- a/Comite.html
+++ b/Comite.html
@@ -86,7 +86,7 @@
         <div class="col-md-12 col-s-12 " id="texte-p1">
             <p id="txtComite">
                 <img align="right" id="imgComite" src="assets/Réunion.jpg" />
-                Trois générations successives de professeur.e.s de mathématiques ont unis leurs forces dans le en se tournant résolument vers l’avenir :
+                Trois générations successives de professeur.e.s de mathématiques ont unis leurs forces en se tournant résolument vers l’avenir :
                 François qui donna son premier cours à l’UQAM à Michel ; Michel qui était sur le jury de thèse de Cédric ; Cédric qui enseigna à Daniel
                 un cours gradué et à Stéphanie qui était étudiante au Vieux Montréal !
                 <br />
