nouveau menu, éco.

--- a/caractere.html
+++ b/caractere.html
@@ -1,28 +1,22 @@
-﻿<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Étienne Saint-Amant | Congrès AMQ 2019</title>
-
+    <title>Écoresponsabilité | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!--CSS general du site (peut etre enlever ceci)-->
     <!--<link rel="stylesheet" href="styles/main.css" type="text/css" />-->
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Artiste.css" />
-    
+    <link rel="stylesheet" href="styles/Pages/Ecoresponsabilite.css" />
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -91,41 +85,47 @@
     </nav>
 
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-artiste" id="Artistes-p1">
-        <h1>Étienne Saint-Amant</h1>
+	<div class="page-standard" id="Eco-p1">
+        <h1>Caractère écoresponsable et objectifs</h1>
         <div class="col-md-12 col-s-12">
-            <p id="txtArtiste">
-                <img align="right" id="imgArtiste" src="assets/EtienneSaintAmant.jpg" />
-
-                Etienne Saint-Amant est maître en sciences et artiste professionnel en arts technologiques. Il se spécialise dans la conception d'oeuvres de grand format conçues et décrites dans un langage mathématique. Il est spécialiste, conférencier et pionnier dans ce domaine. Il est l'auteur de formules et d'équations qui se traduisent en divers outils de composition artistique. Il se dévoue à la recherche conceptuelle et à la création d'oeuvres d'art contemporaines.
-                <br />
-                <br />
-                Après plus de six années consacrées au développement des arts mathématiques, il présente sa première exposition en solo, Aleph, à Sherbrooke. Par la suite, les expositions solos et collectives se succèdent tant sur la scène canadienne qu'internationale. Il remporte plusieurs bourses, prix, distinctions et recommandations élogieuses.
-                <br />
-                <br />
-                Il représente le Canada, en arts visuels, à l'<a href="http://fr.wikipedia.org/wiki/Exposition_universelle_de_2010">exposition universelle de Shanghai</a> au Pavillon du Canada.
-                <br />
-                <br />
-                Comme membre du Laboratoire d'Imagerie de la Connectivité de Sherbrooke (<a href="http://scil.dinf.usherbrooke.ca/?lang=fr">SCIL</a>), il réalise une image médicale cérébrale de son réseau de matière blanche qu'il modifie mathématiquement et structurellement. Ses oeuvres <a href="https://chaoscopia.com/artworks/AutoportraitI.jpg">Autoportrait I</a> et <a href="https://chaoscopia.com/artworks/AutoportraitII.jpg">Autoportrait II</a> sont issues de cette démarche.
-                <br />
-                <br />
-                Il est cité parmi une courte liste d'artistes canadiens contemporains offrant le meilleur potentiel de revente dans l'article « Comment s'enrichir avec... l'art » de Sylvie Dugas, journal les Affaires du 9 et 16 juillet 2011.
-                <br />
-                <br />
-                On retrouve son travail dans plusieurs collections publiques, institutionnelles et privées. Il est l'artiste principal de projets d'intégration à l'architecture ; domaine d'expertise qu'il affectionne particulièrement et qu'il souhaite développer au cours des prochaines années.
-                <br />
-                <br />
-                Etienne Saint-Amant est un artiste originaire de Sherbrooke, Québec, Canada. Son atelier de création est actuellement à Orford, dans les Cantons-de-l'Est. Ses ateliers de production sont à Sherbrooke et Montréal.
-                <br />
-                <br />
-                Visitez le <a href="https://chaoscopia.com">site</a> d'Étienne Saint-Amant.
+            <p id="txtEco">
+            Au cégep du Vieux Montréal, nous avons l’environnement à coeur et donc, il était incontournable de rendre le colloque des mathématique 2019 écoresponsable 
+			pour minimiser son impact. Un événement écoresponsable c’est quoi? C’est un évènement qui intègre le développement durable à toutes les étapes de son organisation, 
+			c’est-à-dire les enjeux environnementaux, mais aussi économiques et sociaux.
+			<br/>
+			Pour atteindre cet objectif, nous avons abordé 5 aspects majeurs: 
+			<br/>
+			<br/>
+			  1)	Le matériel promotionnel: Nous avons décidé d’éviter de distribuer du matériel promotionnel quelconque en priorisant les communications électroniques et, donc en minimisant les impressions.  De plus, une brigade verte est présente pour guider les participants et pour s’assurer du bon déroulement, par exemple: une utilisation adéquate des centres de tris des déchets.
+			<br/>
+			<br/>
+			  2) Le service alimentaire:  Le traiteur est choisi en fonction de plusieurs détails importants comme:<br/>
+				- La vaisselle lavable<br/>
+				- Aucun emballage non réutilisable<br/>
+				- Menu végétarien <br/>
+				- Local <br/>
+				- Choix de produits biologiques et équitables<br/>
+				De plus, les restants  seront conservés et redistribués. 
+			<br/><br/>
+			3) Les matières résiduelles:  Tous les déchets seront triés pour éviter qu’ils se retrouvent à la poubelle. Nous allons faire du compostage et du recyclage. Aussi, les informations sur comment bien utiliser les îlots de tris seront transmis, en plus d’avoir une équipe verte.
+			<br/><br/>
+			4) Le transport:  Sur le site web toutes les informations en lien des modes de transport alternatifs. De plus, des incitatifs financier seront en place comme offrir des billets de métro gratuit aux personnes qui ont utilisées le covoiturage. De plus, nous aimerions compenser nos émissions de carbone après le colloque. 
+ 
 
 			</p>
 			
         </div>
 
+
+
+
     </div>
+
+
+
+
+
+
 
 
 
@@ -197,27 +197,10 @@
 
 
 
-    <!--= function () {
-    alert("button was clicked");-->
-    <script>
-        var list_no = 0;
-        function myFunction(parameter) {
-            list_no = list_no + parameter;
-            if (list_no == -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Michael Atiyah", document.getElementById("imgArtiste").src = "assets/atiyah.jpg"];
 
-
-            }
-            else if (list_no != -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Terence Tao", document.getElementById("imgArtiste").src = "assets/tao.jpg"];;
-            }
-        }
-
-    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="scripts/script1.js"></script>
 </body>
-</html>
