--- a/commentSePreparer.html
+++ b/commentSePreparer.html
@@ -1,28 +1,22 @@
-﻿<!DOCTYPE html>
-
+<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Étienne Saint-Amant | Congrès AMQ 2019</title>
-
+    <title>Écoresponsabilité | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!--CSS general du site (peut etre enlever ceci)-->
     <!--<link rel="stylesheet" href="styles/main.css" type="text/css" />-->
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Artiste.css" />
-    
+    <link rel="stylesheet" href="styles/Pages/Ecoresponsabilite.css" />
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
 <body>
-    <!--BARRE DE NAVIGATION-->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -91,41 +85,53 @@
     </nav>
 
 
-    <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-artiste" id="Artistes-p1">
-        <h1>Étienne Saint-Amant</h1>
+	<div class="page-standard" id="Eco-p1">
+        <h1>Comment se préparer à l'événement</h1>
         <div class="col-md-12 col-s-12">
-            <p id="txtArtiste">
-                <img align="right" id="imgArtiste" src="assets/EtienneSaintAmant.jpg" />
+            <p id="txtEco">
+				Pour la bonne tenue d’un évènement écoresponsable, une préparation individuelle très simple est de mise. Avant le colloque, vous pouvez préparer votre venue en:
+				<br/>
+				- Prenant connaissance des hôtels écoresponsables à proximité ;
+				<br/>
+				- Lisant les différentes sections du site internet pour prendre connaissance de toutes les mesures mises en place ;
+				<br/>
+				- Téléchargeant un PDF de l’horaire des différentes conférences auxquelles vous souhaitez assister lors du colloque ;
+				<br/>
+				- prenant en considération des moyens de transport plus respectueux de l’environnement comme le covoiturage et le transport en commun.
+				<br/>
+				<br/>
+				<br/>
+				Pendant le colloque, il sera facile de faire poser des gestes qui auront un impact comme:
+				<br/>
+				- Apporter sa tasse de café préférée
+				<br/>
+				- Apporter sa propre bouteille d’eau 
+				<br/>
+				- Utiliser une tablette ou un portable pour prendre des notes lors des conférences 
+				<br/>
+				- Utiliser adéquatement les centres de tri des déchets 
+				<br/>
+				- Prioriser les déplacements en transport en commun et en Bixi dans la métropole 
+				<br/><br/>
+				Bien sûr, n’hésitez pas à poser des questions à notre équipe verte qui sera présente tout au long du colloque pour vous aider.
+				<br/>
+				Après le colloque, on vous invite à continuer d’appliquer ces actions écoresponsables dans votre quotidien et à les promouvoir dans votre entourage, car vous aussi vous pouvez faire la différence.
 
-                Etienne Saint-Amant est maître en sciences et artiste professionnel en arts technologiques. Il se spécialise dans la conception d'oeuvres de grand format conçues et décrites dans un langage mathématique. Il est spécialiste, conférencier et pionnier dans ce domaine. Il est l'auteur de formules et d'équations qui se traduisent en divers outils de composition artistique. Il se dévoue à la recherche conceptuelle et à la création d'oeuvres d'art contemporaines.
-                <br />
-                <br />
-                Après plus de six années consacrées au développement des arts mathématiques, il présente sa première exposition en solo, Aleph, à Sherbrooke. Par la suite, les expositions solos et collectives se succèdent tant sur la scène canadienne qu'internationale. Il remporte plusieurs bourses, prix, distinctions et recommandations élogieuses.
-                <br />
-                <br />
-                Il représente le Canada, en arts visuels, à l'<a href="http://fr.wikipedia.org/wiki/Exposition_universelle_de_2010">exposition universelle de Shanghai</a> au Pavillon du Canada.
-                <br />
-                <br />
-                Comme membre du Laboratoire d'Imagerie de la Connectivité de Sherbrooke (<a href="http://scil.dinf.usherbrooke.ca/?lang=fr">SCIL</a>), il réalise une image médicale cérébrale de son réseau de matière blanche qu'il modifie mathématiquement et structurellement. Ses oeuvres <a href="https://chaoscopia.com/artworks/AutoportraitI.jpg">Autoportrait I</a> et <a href="https://chaoscopia.com/artworks/AutoportraitII.jpg">Autoportrait II</a> sont issues de cette démarche.
-                <br />
-                <br />
-                Il est cité parmi une courte liste d'artistes canadiens contemporains offrant le meilleur potentiel de revente dans l'article « Comment s'enrichir avec... l'art » de Sylvie Dugas, journal les Affaires du 9 et 16 juillet 2011.
-                <br />
-                <br />
-                On retrouve son travail dans plusieurs collections publiques, institutionnelles et privées. Il est l'artiste principal de projets d'intégration à l'architecture ; domaine d'expertise qu'il affectionne particulièrement et qu'il souhaite développer au cours des prochaines années.
-                <br />
-                <br />
-                Etienne Saint-Amant est un artiste originaire de Sherbrooke, Québec, Canada. Son atelier de création est actuellement à Orford, dans les Cantons-de-l'Est. Ses ateliers de production sont à Sherbrooke et Montréal.
-                <br />
-                <br />
-                Visitez le <a href="https://chaoscopia.com">site</a> d'Étienne Saint-Amant.
 
 			</p>
 			
         </div>
 
     </div>
+
+
+    </div>
+
+
+
+
+
+
 
 
 
@@ -197,27 +203,10 @@
 
 
 
-    <!--= function () {
-    alert("button was clicked");-->
-    <script>
-        var list_no = 0;
-        function myFunction(parameter) {
-            list_no = list_no + parameter;
-            if (list_no == -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Michael Atiyah", document.getElementById("imgArtiste").src = "assets/atiyah.jpg"];
 
-
-            }
-            else if (list_no != -1) {
-                return [document.getElementById("nomArtiste").innerHTML = "Terence Tao", document.getElementById("imgArtiste").src = "assets/tao.jpg"];;
-            }
-        }
-
-    </script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="scripts/script1.js"></script>
 </body>
-</html>
