itineraire + modifs mineures

--- a/caractere.html
+++ b/caractere.html
@@ -96,7 +96,7 @@
 			Pour atteindre cet objectif, nous avons abordé 5 aspects majeurs: 
 			<br/>
 			<br/>
-			  1)	Le matériel promotionnel: Nous avons décidé d’éviter de distribuer du matériel promotionnel quelconque en priorisant les communications électroniques et, donc en minimisant les impressions.  De plus, une brigade verte est présente pour guider les participants et pour s’assurer du bon déroulement, par exemple: une utilisation adéquate des centres de tris des déchets.
+			  1) Le matériel promotionnel: Nous avons décidé d’éviter de distribuer du matériel promotionnel quelconque en priorisant les communications électroniques et, donc en minimisant les impressions.  De plus, une brigade verte est présente pour guider les participants et pour s’assurer du bon déroulement, par exemple: une utilisation adéquate des centres de tris des déchets.
 			<br/>
 			<br/>
 			  2) Le service alimentaire:  Le traiteur est choisi en fonction de plusieurs détails importants comme:<br/>
@@ -107,9 +107,10 @@
 				- Choix de produits biologiques et équitables<br/>
 				De plus, les restants  seront conservés et redistribués. 
 			<br/><br/>
-			3) Les matières résiduelles:  Tous les déchets seront triés pour éviter qu’ils se retrouvent à la poubelle. Nous allons faire du compostage et du recyclage. Aussi, les informations sur comment bien utiliser les îlots de tris seront transmis, en plus d’avoir une équipe verte.
+			3) Les matières résiduelles: Tous les déchets seront triés pour éviter qu’ils se retrouvent à la poubelle. Nous allons faire du compostage et du recyclage. Aussi, les informations sur comment bien utiliser les îlots de tris seront transmis, en plus d’avoir une équipe verte.
 			<br/><br/>
-			4) Le transport:  Sur le site web toutes les informations en lien des modes de transport alternatifs. De plus, des incitatifs financier seront en place comme offrir des billets de métro gratuit aux personnes qui ont utilisées le covoiturage. De plus, nous aimerions compenser nos émissions de carbone après le colloque. 
+			4) Le transport: Sur le <a href="itineraire.html">site web</a> toutes les informations en lien des modes de transport alternatifs. De plus, des incitatifs financier seront en place comme offrir des billets de métro gratuitement aux personnes qui ont utilisées le covoiturage. 
+			De plus, nous aimerions compenser nos émissions de carbone après le colloque. 
  
 
 			</p>
