--- a/itineraire.html
+++ b/itineraire.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>Transport | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -87,13 +87,52 @@
 
 
 
-    <div class="page-standard">
+    <div class="page-itineraire" id="Itineraire-p1">
 
-        <p>
-            lorem ipsum
-        </p>
+        <h1>Comme se rendre</h1>
+		<h3 id="ancrageVelo">En vélo</h3>
+        <div class="col-md-12 col-s-12" >
+            <p class="txtItineraire">
+			<b>Réseaux de pistes cyclables:</b><br/>
+			Dans les plans suivants, vous trouverez les pistes cyclables de Montréal ainsi que les différentes bornes BIXI. 
+			<br/>
+			Carte des pistes cyclables de Montréal : 
+			<br/><font color=blue>insérer carte_centre-ville.pdf</font><br/><br/>
+			Carte des pistes cyclables du Grand Montréal (si vous venez de plus loin!):
+			<br/> <font color=blue>insérer cartemontrealmetropolitain.pdf</font>
+			<br/><br/>
+
+			<b>Venir en BIXI:</b>
+			<br/>
+			Bornes à proximité du cégep : <br/>
+			- Sanguinet/Ontario (station 6021), <font color=blue>XX</font> ancrages disponibles.<br/>
+			- de l’Hôtel-de-ville/Sherbrooke (station 6021), <font color=blue>XX</font> ancrages disponibles.<br/>
+			- Sanguinet/de Maisonneuve (station 6013), <font color=blue>XX</font> ancrages disponibles.<br/>
+			<br/><br/>
+			Pour connaître l’emplacement des autres stations BIXI à Montréal, cliquer <a href="https://secure.bixi.com/map/">ici</a>!<br/>
+	  	    Pour savoir en temps réel le nombre de BIXI disponibles à chaque station, téléchargez l’application <a href="https://itunes.apple.com/ca/app/bixi/id628543321?mt=8">App Store</a> ou <a href="https://play.google.com/store/apps/details?id=com.eightd.biximobile&amp;hl=fr">Google Play</a>.
+
+			</p>
+		</div>
+
+		<h3>En transport en commun</h3>
+        <div class="col-md-12 col-s-12">
+            <p class="txtItineraire">
+			<img align="right" id="imgPlanStationsMetro" src="assets/planStationsMetro.gif" />
+			Le cégep est situé entre trois stations de métro : Berri-Uqam, Saint-Laurent et Sherbrooke. 
+			<br/>À vous de choisir votre station préférée!
+			<br/><br/>
+			Plans du réseau de transport :<br/>
+			Plan du centre-ville :  <font color=blue>plan_reseau_centreville.pdf</font><br/>
+			Plan du réseau de Montréal : <font color=blue>plan_reseau.pdf</font><br/>
+			Plan du réseau de nuit (si vous veillez tard) : <font color=blue>plan_reseau_nuit.pdf et plan_centreville_nuit.pdf</font><br/>
+			Si vous venez de plus loin, pourquoi pas le train? : <font color=blue>reseautrain.pdf</font><br/>
+			<br/>
+			<img align="left" id="imgSTM" src="assets/stmMerci.jpg" />
 
 
+			</p>
+		</div>
 
     </div>
 
