--- a/proposerUnAtelier.html
+++ b/proposerUnAtelier.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Proche du Cégep | Congrès AMQ 2019</title>
+    <title>Proposer un atelier | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -12,7 +12,7 @@
     <!--CSS General du site-->
     <link rel="stylesheet" href="styles/main.css" />
     <!--CSS de la page actuelle-->
-    <link rel="stylesheet" href="styles/Pages/Proce_cegep.css" />
+    <link rel="stylesheet" href="styles/Pages/ProposerUnAtelier.css" />
 
     <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </head>
@@ -84,19 +84,20 @@
 
 
 
-    <div class="page-standard">
+   <div class="page-proposer" id="Proposer-p1">
+        <h1>Proposer un atelier</h1>
+		<div class="col-md-12 col-s-12" >
+            <p id="txtProposer">
+			<br/>
+			<br/>
+			Vous pouvez proposer un atelier jusqu'au <font color=blue>15 août??</font>, en communiquant avec nous par courriel : <a href="mailto:info@amq2019">info@amq2019.com</a>.
+			
+			
+			
+			</p>
+		</div>
 
-        <p>
-            lorem ipsum
-        </p>
-
-
-
-    </div>
-
-
-
-
+		</div>
 
 
 
