--- a/commanditaires.html
+++ b/commanditaires.html
@@ -24,7 +24,7 @@
 <body>
 
     <!--BARRE DE NAVIGATION-->
-    <nav class="navbar navbar-default navbar-fixed-top">
+     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -58,17 +58,16 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="invites.html">ATELIERS</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
-
-                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
@@ -79,8 +78,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="caractere.html">CARACTÈRE ÉCORESPONSABLE ET OBJECTIFS</a></li>
                             <li><a href="commentSePreparer.html">COMMENT SE PRÉPARER</a></li>
-                            <li><a href="matieresResiduelles.html">GESTION DES MATIÈRES RÉSIDUELLES</a></li>
-                            <li><a href="servicesAlimentaires.html">SERVICE ALIMENTAIRE</a></li>
                         </ul>
 					</li>
 					
@@ -90,7 +87,6 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-
 
 
 
