--- a/horaire.html
+++ b/horaire.html
@@ -56,17 +56,16 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="invites.html">ATELIERS</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
-
-                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
@@ -77,8 +76,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="caractere.html">CARACTÈRE ÉCORESPONSABLE ET OBJECTIFS</a></li>
                             <li><a href="commentSePreparer.html">COMMENT SE PRÉPARER</a></li>
-                            <li><a href="matieresResiduelles.html">GESTION DES MATIÈRES RÉSIDUELLES</a></li>
-                            <li><a href="servicesAlimentaires.html">SERVICE ALIMENTAIRE</a></li>
                         </ul>
 					</li>
 					
@@ -210,7 +207,7 @@
 				<tr class="demiHeure">
 					<td> &nbsp </td>
 					<!--<td></td>-->
-					<td class="atelier" rowspan="2"></td>
+					<td class="atelier" rowspan="2">Ateliers</td>
 					<td></td>
 				</tr>
 				<tr class="heure">
