--- a/itineraire.html
+++ b/itineraire.html
@@ -51,17 +51,16 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="invites.html">ATELIERS</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
-
-                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
@@ -72,8 +71,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="caractere.html">CARACTÈRE ÉCORESPONSABLE ET OBJECTIFS</a></li>
                             <li><a href="commentSePreparer.html">COMMENT SE PRÉPARER</a></li>
-                            <li><a href="matieresResiduelles.html">GESTION DES MATIÈRES RÉSIDUELLES</a></li>
-                            <li><a href="servicesAlimentaires.html">SERVICE ALIMENTAIRE</a></li>
                         </ul>
 					</li>
 					
@@ -85,11 +82,9 @@
     </nav>
 
 
-
-
     <div class="page-itineraire" id="Itineraire-p1">
 
-        <h1>Comme se rendre</h1>
+        <h1>Comment se rendre</h1>
 		<h3 id="ancrageVelo">En vélo</h3>
         <div class="col-md-12 col-s-12" >
             <p class="txtItineraire">
@@ -129,11 +124,33 @@
 			Si vous venez de plus loin, pourquoi pas le train? : <font color=blue>reseautrain.pdf</font><br/>
 			<br/>
 			<img align="left" id="imgSTM" src="assets/stmMerci.jpg" />
-
-
+			<br/>
 			</p>
 		</div>
 
+		
+		<br/>
+		<h3>En voiture</h3>
+		<div class="col-md-4 col-s-12" id="nous-joindre">
+			<p class="txtItineraire">
+				<iframe class="rond" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2795.7756214546134!2d-73.56855844883194!3d45.51459527899897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91a4b508adcab%3A0x9439f187f763ea27!2sC%C3%A9gep+du+Vieux+Montr%C3%A9al!5e0!3m2!1sen!2sca!4v1548698012269" width="200" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+			</p>
+        </div>
+		
+		
+		
+		
+		
+		
+		
+		</div>
+		
+		
+		
+		
+		
+		
+		
     </div>
 
 
