--- a/nous_contacter.html
+++ b/nous_contacter.html
@@ -51,17 +51,16 @@
                             <li><a href="conference_pleniere.html">CONFÉRENCE PLÉNIÈRE</a></li>
                             <li><a href="Artiste.html">ARTISTE INVITÉ</a></li>
                             <li><a href="horaire.html">HORAIRE GÉNÉRAL</a></li>
-                            <li><a href="invites.html">ATELIERS</a></li>
+                            <li><a href="proposerUnAtelier.html">PROPOSER UN ATELIER</a></li>
                         </ul>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle white" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">SE RENDRE AU CONGRÈS<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li><a href="itineraire.html">ITINÉRAIRE</a></li>
-                            <li><a href="covoiturage.html">COVOITURAGE</a></li>
-
-                            <li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="covoiturage.html">COVOITURAGE</a></li>
+							<li><a href="stationnement.html">STATIONNEMENT</a></li>
+							<li><a href="hebergement.html">HÉBERGEMENT</a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="proche_cegep.html">LIEUX PROCHES DU CÉGEP</a></li>
                         </ul>
@@ -72,8 +71,6 @@
                         <ul class="dropdown-menu">
                             <li><a href="caractere.html">CARACTÈRE ÉCORESPONSABLE ET OBJECTIFS</a></li>
                             <li><a href="commentSePreparer.html">COMMENT SE PRÉPARER</a></li>
-                            <li><a href="matieresResiduelles.html">GESTION DES MATIÈRES RÉSIDUELLES</a></li>
-                            <li><a href="servicesAlimentaires.html">SERVICE ALIMENTAIRE</a></li>
                         </ul>
 					</li>
 					
@@ -87,19 +84,30 @@
 
 
 
-    <div class="page-standard">
+   <div class="page-contact" id="Contact-p1">
+        <h1>Nous contacter</h1>
+		<div class="col-md-12 col-s-12" >
+            <p id="txtContact">
+			<br/>
+			<br/>
+			<b>Adresse postale</b> <br/>
+			Cégep du Vieux Montréal <br/>
+			255, rue Ontario Est <br/>
+			Montréal (Québec) <br/>
+			H2X 1X6 <br/>
 
-        <p>
-            lorem ipsum
-        </p>
+			<br/><br/>
+			<b>Courriel</b>			<br/>
+			Courriel du comité organisateur :  info@amq2019.com <br/>
+			<br/><br/>
+			<b>Téléphone </b><br/>
+			Téléphone du cégep : 514 982-3437 <br/>
+			Poste pour rejoindre un organisateur du congrès : poste 2270 <br/>
+			
+			</p>
+		</div>
 
-
-
-    </div>
-
-
-
-
+		</div>
 
 
 
