--- a/Comite.html
+++ b/Comite.html
@@ -91,14 +91,15 @@
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
     <div class="page-standard" id="Comite-p1">
         <h1>Le comité organisateur</h1>
-        <div class="col-md-12 col-s-12 " id="texte-p1">
+        <div class="col-md-12 col-s-12 ">
             <p id="txtComite">
                 <img align="right" id="imgComite" src="assets/Réunion.jpg" />
                 Trois générations successives de professeur.e.s de mathématiques ont unis leurs forces en se tournant résolument vers l’avenir :
                 François qui donna son premier cours à l’UQAM à Michel ; Michel qui était sur le jury de thèse de Cédric ; Cédric qui enseigna à Daniel
                 un cours gradué et à Stéphanie qui était étudiante au Vieux Montréal !
                 <br />
-                <br />
+                <img id="imgGraphe" src="assets/graphe.png" />
+				<br />
                 Quintet des temps modernes inspiré par les valeurs et/à l’esprit humanistes de notre cégep, nous sommes fiers  de nous situer à l’entrée de l’enseignement supérieur: transition entre des élèves de secondaire et de jeunes adultes, mandat de formation de citoyen.ne.s responsables et engagé.e.s dans la société.
                 <br /><br />
                 Un enthousiasme débordant nous caractérise, autant pour les mathématiques, que pour notre engagement envers nos étudiant.e.s, que dans l’organisation du colloque où vous viendrez nous rencontrez sans faute !
@@ -106,8 +107,8 @@
             </p>
         </div>
 
-
-        </a>
+		
+       
     </div>
 
 
