--- a/apropos_AMQ.html
+++ b/apropos_AMQ.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>À propos de l'AMQ | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -84,12 +84,23 @@
 
 
 
-    <div class="page-standard">
-        
-        <p>
-            lorem ipsum
+    <div class="page-aPropos" id="APropos-p1">
+	<h1>À propos de l'AMQ</h1>
+        <div class="col-md-12 col-s-12">
+        <p id="txtAPropos">
+		
+		Depuis sa fondation en 1958, la mission de l’AMQ a été
+		<br/>
+		- d’aider les éducateurs dans leur travail en mettant à leur disposition divers services ;<br/>
+		- de susciter par ses activités et ses publications un intérêt plus grand pour les mathématiques ;<br/>
+		- de favoriser une mise à jour continue de l’enseignement des mathématiques, en collaborant avec le ministère de l’Éducation, 
+		les institutions d’enseignement et les éditeurs.<br/>
+		<br/>
+        À chaque année, l’AMQ organise un congrès national réunissant des enseignants de tous les niveaux afin qu’ils partagent leurs expériences et leurs innovations.
+			
+			
         </p>
-
+		</div>
 
 
     </div>
