--- a/conference_pleniere.html
+++ b/conference_pleniere.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>Conférence plénière | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
