--- a/covoiturage.html
+++ b/covoiturage.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>Accueil | Congrès AMQ 2019</title>
+    <title>Covoiturage | Congrès AMQ 2019</title>
     <!--favicon-->
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <!-- Latest compiled and minified CSS -->
@@ -83,14 +83,12 @@
 
 
 
-    <div class="page-standard">
-
-        <p>
-            lorem ipsum
+    <div class="page-covoiturage" id="Covoiturage-p1">
+		<h1>Covoiturage  </h1>
+		<br/>
+        <p id="txtCovoiturage">
+            Suivez la page <a href="https://www.facebook.com/AMQ2019/">facebook</a> du congrès pour faire connaissance avec les participants!
         </p>
-
-
-
     </div>
 
 
@@ -111,8 +109,8 @@
                     <!-- Grid column -->
                     <div class="col-md-6 mt-md-0 mt-3">
                         <!-- Content -->
-                        <h1 class="footer-congress" id="ftc-top">CONGRÈS</h1>
-                        <h1 class="footer-congress">AMQ 2019</h1>
+                        <h3 class="footer-congress" id="ftc-top">CONGRÈS</h3>
+                        <h3 class="footer-congress">AMQ 2019</h3>
                     </div>
                     <!-- Grid column -->
                     <div id="footer-list">
