modifs page-standard

--- a/Artiste.html
+++ b/Artiste.html
@@ -88,7 +88,7 @@
     </nav>
 
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-artiste" id="Artistes-p1">
+    <div class="page-standard" id="Artistes-p1">
         <h1>Étienne Saint-Amant</h1>
         <div class="col-md-12 col-s-12">
             <p id="txtArtiste">
