--- a/caractere.html
+++ b/caractere.html
@@ -81,7 +81,7 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-	<div class="page-standard" id="Eco-p1">
+	<div class="page-standard" id="page-eco">
         <h1>Caractère écoresponsable et objectifs</h1>
         <div class="col-md-12 col-s-12">
             <p id="txtEco">
