--- a/commentSePreparer.html
+++ b/commentSePreparer.html
@@ -82,7 +82,7 @@
     </nav>
 
 
-	<div class="page-standard" id="Eco-p1">
+	<div class="page-standard" id="page-eco">
         <h1>Comment se préparer à l'événement</h1>
         <div class="col-md-12 col-s-12">
             <p id="txtEco">
