--- a/covoiturage.html
+++ b/covoiturage.html
@@ -83,20 +83,13 @@
 
 
 
-    <div class="page-covoiturage" id="Covoiturage-p1">
+    <div class="page-standard" id="Covoiturage-p1">
 		<h1>Covoiturage  </h1>
 		<br/>
         <p id="txtCovoiturage">
             Suivez la page <a href="https://www.facebook.com/AMQ2019/">facebook</a> du congrès pour faire connaissance avec les participants!
         </p>
     </div>
-
-
-
-
-
-
-
 
 
     <div class="footer">
