--- a/horaire.html
+++ b/horaire.html
@@ -87,11 +87,10 @@
     </nav>
 
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-horaire">
+    <div class="page-standard" id="page-horaire">
 		<div class="col-md-12 col-s-12">
 			
 		    <h1> Horaire général</h1>
-			<!--<img id="horaireGen" src="assets/horaire_general.jpg" onclick="myFunction()" />-->
 			<br/>
 			<table style="width:800px">
 				<tr>
