--- a/inscription.html
+++ b/inscription.html
@@ -83,26 +83,16 @@
 
 
 
-    <div class="page-standard" id="Inscription-p1">
+    <div class="page-standard" id="page-inscription">
 		<h1>S'inscrire</h1>
         <p id="txtInscription">
          
 		L’incription au congrès doit être effectuée sur le <a href="https://www.amq.math.ca/congres/inscription/">portail de l’AMQ</a>. 
 		Les tarifs d’inscription sont réduits de <font color=blue>XX%</font> jusqu’au <font color=blue>XX</font> septembre.
 		<br/>Notez que l’inscription au congrès est nécessaire même si on anime un atelier; vous aurez cependant droit à un rabais.
-
         </p>
 
-
-
     </div>
-
-
-
-
-
-
-
 
 
     <div class="footer">
