--- a/itineraire.html
+++ b/itineraire.html
@@ -81,9 +81,7 @@
         </div><!-- /.container-fluid -->
     </nav>
 
-
-    <div class="page-itineraire" id="Itineraire-p1">
-
+    <div class="page-standard" id="page-itineraire">
         <h1>Comment se rendre</h1>
 		<h3 id="ancrageVelo">En vélo</h3>
         <div class="col-md-12 col-s-12" >
