--- a/nous_contacter.html
+++ b/nous_contacter.html
@@ -82,9 +82,7 @@
     </nav>
 
 
-
-
-   <div class="page-contact" id="Contact-p1">
+   <div class="page-standard" id="page-contact">
         <h1>Nous contacter</h1>
 		<div class="col-md-12 col-s-12" >
             <p id="txtContact">
@@ -97,20 +95,16 @@
 			H2X 1X6 <br/>
 
 			<br/><br/>
-			<b>Courriel</b>			<br/>
+			<b>Courriel</b>
+			<br/>
 			Courriel du comité organisateur :  info@amq2019.com <br/>
 			<br/><br/>
 			<b>Téléphone </b><br/>
 			Téléphone du cégep : 514 982-3437 <br/>
 			Poste pour rejoindre un organisateur du congrès : poste 2270 <br/>
-			
 			</p>
 		</div>
-
-		</div>
-
-
-
+	</div>
 
 
     <div class="footer">
@@ -176,11 +170,6 @@
         <!-- Footer -->
 
     </div>
-
-
-
-
-
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
