--- a/proposerUnAtelier.html
+++ b/proposerUnAtelier.html
@@ -84,7 +84,7 @@
 
 
 
-   <div class="page-proposer" id="Proposer-p1">
+   <div class="page-standard" id="page-proposer">
         <h1>Proposer un atelier</h1>
 		<div class="col-md-12 col-s-12" >
             <p id="txtProposer">
