--- a/stationnement.html
+++ b/stationnement.html
@@ -82,9 +82,7 @@
     </nav>
 
 
-
-
-    <div class="page-stationnement" id="Stationnement-p1">
+    <div class="page-standard" id="page-stationnement">
 		<h1>Stationnement</h1>
         <div class="col-md-12 col-s-12">
             <p class="txtStationnement">
