--- a/Comite.html
+++ b/Comite.html
@@ -89,7 +89,7 @@
 
 
     <!--ACCUEIL & TEXTE DE BIENVENUE-->
-    <div class="page-standard" id="Comite-p1">
+    <div class="page-standard" id="page-comite">
         <h1>Le comité organisateur</h1>
         <div class="col-md-12 col-s-12 ">
             <p id="txtComite">
