--- a/conference_pleniere.html
+++ b/conference_pleniere.html
@@ -82,7 +82,7 @@
     </nav>
 
 
-	<div class="page-pleniere" id="Denis-p1">
+	<div class="page-standard" id="Denis-p1">
         <h1>La conférence plénière</h1>
         <div class="col-md-12 col-s-12 ">
             <p class="txtDenis">
